c++: lifetime extension with .* expression [PR53288]

This PR points out a case where we are not extending the lifetime of a
temporary when the subobject is denoted by a pointer-to-member operation.
These rules were clarified in C++20 by CWG1299.

There are other cases that also need to be handled under CWG1299, but are
not fixed by this patch.

	PR c++/53288
	DR 1299

gcc/cp/ChangeLog:

	* call.cc (extend_ref_init_temps_1): Handle ptrmem expression.

gcc/testsuite/ChangeLog:

	* g++.dg/init/lifetime4.C: New test.